-added .env.test -fixes